--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,7 +113,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/popular_ll"
             android:layout_marginLeft="@dimen/middleMarginFromEdge"
-            android:background="@color/grey">
+            app:cardBackgroundColor="@color/grey"
+            app:cardCornerRadius="@dimen/miniMarginFromEdge">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -126,7 +127,7 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerInParent="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ic_french_toasts"/>
+                    android:src="@drawable/ic_french_toasts" />
 
                 <TextView
                     android:id="@+id/tv_type_of_meals_tv"
@@ -245,7 +246,8 @@
             android:layout_alignParentRight="true"
             android:layout_marginLeft="65dp"
             android:layout_marginRight="@dimen/middleMarginFromEdge"
-            android:background="@color/grey">
+            app:cardBackgroundColor="@color/grey"
+            app:cardCornerRadius="@dimen/miniMarginFromEdge">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -381,7 +383,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
-            android:text="Рекомендуем"
+            android:text="@string/recommend_title"
             android:textColor="@color/black"
             android:textSize="24dp"
             android:textStyle="bold" />
@@ -410,8 +412,8 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/middleMarginFromEdge"
             android:layout_marginRight="@dimen/middleMarginFromEdge"
-
-            android:background="@color/grey">
+            app:cardBackgroundColor="@color/grey"
+            app:cardCornerRadius="@dimen/miniMarginFromEdge">
 
             <LinearLayout
                 android:id="@+id/mini_cards1_ll"
@@ -478,7 +480,6 @@
                             android:textColor="@color/orange"
                             android:textSize="9sp" />
 
-
                     </LinearLayout>
 
                     <LinearLayout
@@ -486,6 +487,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/rating1_cards_ll">
+
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -501,7 +503,6 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-
                                 android:layout_marginLeft="3dp"
                                 android:gravity="center"
                                 android:text="@string/_10min"
@@ -543,10 +544,9 @@
                     <androidx.appcompat.widget.AppCompatCheckBox
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:button="@drawable/favorite_selector"
-                        android:gravity="top"
                         android:layout_marginLeft="60dp"
-                        />
+                        android:button="@drawable/favorite_selector"
+                        android:gravity="top" />
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -565,8 +565,8 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/middleMarginFromEdge"
             android:layout_marginRight="@dimen/middleMarginFromEdge"
-
-            android:background="@color/grey">
+            app:cardBackgroundColor="@color/grey"
+            app:cardCornerRadius="@dimen/miniMarginFromEdge">
 
             <LinearLayout
                 android:id="@+id/mini_cards2_ll"
@@ -578,7 +578,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:scaleType="centerCrop"
-
                     android:src="@drawable/ic_glazed_salmon" />
 
                 <LinearLayout
@@ -635,7 +634,6 @@
 
                     </LinearLayout>
 
-
                     <LinearLayout
                         android:id="@+id/iform2_cards_ll"
                         android:layout_width="wrap_content"
@@ -657,7 +655,6 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-
                                 android:layout_marginLeft="3dp"
                                 android:gravity="center"
                                 android:text="@string/_45min"
@@ -698,9 +695,9 @@
                     <androidx.appcompat.widget.AppCompatCheckBox
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginLeft="60dp"
                         android:button="@drawable/favorite_selector"
-                        android:gravity="top"
-                        android:layout_marginLeft="60dp"/>
+                        android:gravity="top" />
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
