--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
 
         android:src="@drawable/ic_filter" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/popular_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -84,7 +84,7 @@
             android:id="@+id/popular_recipe_tf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/search_tf"
+            android:layout_alignParentStart="true"
             android:layout_marginLeft="24dp"
             android:text="@string/popular_dishes"
             android:textColor="@color/black"
@@ -95,14 +95,12 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/search_tf"
-            android:layout_marginLeft="65dp"
-            android:layout_marginTop="-3dp"
-            android:layout_toRightOf="@id/popular_recipe_tf"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="@dimen/miniMarginFromEdge"
             android:text="@string/more"
             android:textColor="@color/orange"
             android:textSize="10sp" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/cards_ll"
@@ -374,7 +372,7 @@
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/recommend_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -384,6 +382,7 @@
             android:id="@+id/recommend_tf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_marginLeft="24dp"
             android:text="@string/recommend_title"
             android:textColor="@color/black"
@@ -394,13 +393,12 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="135dp"
-            android:layout_marginTop="-3dp"
-            android:layout_toRightOf="@+id/recommend_tf"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="@dimen/miniMarginFromEdge"
             android:text="@string/more"
             android:textColor="@color/orange"
             android:textSize="10sp" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cards1_ll"
