--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -8,7 +8,7 @@
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/top_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,6 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_marginLeft="@dimen/miniMarginFromEdge"
             android:layout_marginTop="@dimen/miniMarginFromEdge"
             android:text="@string/filter"
@@ -27,14 +28,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="200dp"
+            android:layout_alignParentEnd="true"
             android:layout_marginTop="@dimen/miniMarginFromEdge"
             android:layout_marginRight="@dimen/miniMarginFromEdge"
             android:text="@string/clear_btn"
             android:textColor="@color/orange"
             android:textSize="16dp"
             android:textStyle="bold" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/type_of_meals_tv"
@@ -167,7 +168,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/dishes_cg"
         android:layout_marginLeft="@dimen/miniMarginFromEdge"
-        android:layout_marginRight="@dimen/miniMarginFromEdge"/>
+        android:layout_marginRight="@dimen/miniMarginFromEdge" />
 
     <TextView
         android:id="@+id/count_of_meals_tv"
